test/operator/add_bool_string.lox
true + "s" // error: Operation not allowed
